resposive enhanced, nav features added

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -85,6 +85,8 @@
             }
         }
         a{
+            text-decoration: none;
+            color: white;
             cursor: pointer;
         }
     } 
