--- a/src/components/Contact/style.module.scss
+++ b/src/components/Contact/style.module.scss
@@ -6,18 +6,38 @@
     justify-content: center;
     background-color: #141516;
     position: relative;
+
+    @media (max-width: 480px) {
+        margin-top: 300px;
+    }
     .body{
-        padding-top: 200px;
+        padding-top: 110px;
         width: 100%;
         max-width: 1800px;
         background-color: #141516;
 
+        //mobile
+        @media (max-width: 480px) {
+           .body {
+            padding-top: 0px;
+            margin-top: 200px;
+            width: 100%;
+            max-width: 1800px;
+            background-color: #141516;
+           }
+        }
+
         .title{
             border-bottom: 1px solid rgb(134, 134, 134);
-            padding-bottom: 100px;
+            padding-bottom: 110px;
             margin-left: 200px;
             margin-right: 200px;
             position: relative;
+
+            @media (max-width: 480px) {
+                margin-left: 50px;
+                margin-right: 50px;
+            }
             span{
                 display: flex;
                 align-items: center;
@@ -57,6 +77,11 @@
                 align-items: center;
                 justify-content: center;
                 cursor: pointer;
+
+                @media (max-width: 480px) {
+                    width: 100px;
+                    height: 100px;
+                }
                 p{
                     margin: 0px;
                     font-size: 16px;
@@ -74,15 +99,32 @@
         .nav{
             display: flex;
             gap: 20px;
-            margin-top: 100px;
+            margin-top: 50px;
             margin-left: 200px;
             margin-right: 200px;
+
+            @media (max-width: 480px) {
+
+                    display: flex;
+                    flex-direction: column;
+                    margin-top: 50px;
+                    margin-left: 50px;
+                    margin-right: 50px;
+                    gap: 10px;
+                
+            }
         }
         .info{
             display: flex;
             justify-content: space-between;
             margin-top: 200px;
             padding: 20px;
+
+            @media (max-width: 480px) {
+                flex-direction: column;
+                gap: 20px;
+                margin-top: 100px;
+            }
             div{
                 display: flex;
                 gap: 10px;
