--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -1,4 +1,5 @@
 .projects {
+    z-index: 2;
     display: flex;
     align-items: center;
     padding-left: 5%;
@@ -8,9 +9,7 @@
     margin-bottom: 100px;
 
     @media (max-width: 768px) {
-        // padding-left: 20px;
-        // padding-right: 20px;
-        margin-top: 50px;
+        
     }
 
     .body {
