--- a/src/components/Description/style.module.scss
+++ b/src/components/Description/style.module.scss
@@ -44,6 +44,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            text-align: center;
             p{
                 margin: 0px;
                 font-size: 16px;
