--- a/src/components/Description/style.module.scss
+++ b/src/components/Description/style.module.scss
@@ -45,6 +45,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            cursor: pointer;
             p{
                 margin: 0px;
                 font-size: 16px;
