feat(CV download)

--- a/src/components/Description/style.module.scss
+++ b/src/components/Description/style.module.scss
@@ -11,6 +11,10 @@
         gap: 20px;
         position: relative;
         box-sizing: border-box;
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
         p{
             margin: 0px;
             &:nth-of-type(1){
